force-app/main/default/objects/Git_Repository__c/Git_Repository__c.object-meta.xml
<CustomObject>
    <label>Git_Repository</label>
    <nameField>
        <label>Git_Repo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git_Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>