force-app/main/default/objects/Git_Repository__c/fields/Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>Default_Branch__c</fullName>
    <label>Default_Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>