force-app/main/default/objects/Git_Repository__c/fields/Git_Provider__c.field-meta.xml
<CustomField>
    <fullName>Git_Provider__c</fullName>
    <label>Git Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GitHub</fullName>
                <default>true</default>
                <label>GitHub</label>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>Bitbucket</fullName>
            </value>
            <value>
                <fullName>Azure_DevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>