force-app/main/default/objects/Git_Repository__c/fields/GitHub_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_URL__c</fullName>
    <label>GitHub_URL</label>
    <type>Url</type>
</CustomField>