force-app/main/default/objects/Git_Repository__c/fields/Repository_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Repository_Identifier__c</fullName>
    <label>Repository Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>