force-app/main/default/objects/Git_Repository__c/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <label>Repository Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>